--- a/src/components/bem-blocks/card/card.pug
+++ b/src/components/bem-blocks/card/card.pug
@@ -3,4 +3,4 @@ article.card
   h3 Mercedes
   p.card__price Цена:
     span 500 000 ₽
-  a(href="#!").btn Подробнее
+  a(href="single.html").btn Подробнее
