--- a/src/components/sections/advantages/advantages.pug
+++ b/src/components/sections/advantages/advantages.pug
@@ -1,4 +1,4 @@
-section.advantages 
+section#advantages.advantages 
   .container 
     h2 #[span.yellow Наши] преимущества
     p Доверьте выбор автомобиля профессионалам
