--- a/src/components/sections/catalog/catalog.pug
+++ b/src/components/sections/catalog/catalog.pug
@@ -1,4 +1,4 @@
-section.catalog
+section#catalog.catalog
   .container 
     h2 #[span.yellow Каталог] автомобилей
     p.catalog__subtitle Лучший ассортимент и цены
