--- a/src/components/sections/footer/footer.pug
+++ b/src/components/sections/footer/footer.pug
@@ -8,4 +8,4 @@ footer.footer
       //- include ./../../bem-blocks/socials/socials.pug
       //- include ./../../bem-blocks/phone/phone.pug
       //- include ./../../bem-blocks/email/email.pug
-    .copywrite © 2023
+    .copyright Copyright © 2023
