--- a/src/layouts/footer.pug
+++ b/src/layouts/footer.pug
@@ -1,2 +1,4 @@
 //- Scripts
+//- script(src="./wp-content/themes/automovers/assets/js/fslightbox.js")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.4.1/index.min.js")
 script(src="./wp-content/themes/automovers/assets/js/main.js")
