--- a/src/components/bem-blocks/nav/nav.pug
+++ b/src/components/bem-blocks/nav/nav.pug
@@ -1,14 +1,12 @@
 nav.nav
   ul(role="menu").menu
     li(role="menuitem").menu-item.menu-item--active
-      a(href="#services") Главная
+      a(href="index.html") Главная
     li(role="menuitem").menu-item 
-      a(href="#price") Преимущества
+      a(href="#advantages") Преимущества
     li(role="menuitem").menu-item 
-      a(href="#reviews") Каталог автомобилей
+      a(href="#catalog") Каталог автомобилей
     li(role="menuitem").menu-item 
-      a(href="#photo") Отзывы
+      a(href="#about") О нас
     li(role="menuitem").menu-item 
-      a(href="#photo") О нас
-    li(role="menuitem").menu-item 
-      a(href="#photo") Контакты
+      a(href="#reviews") Отзывы
