--- a/src/components/sections/about/about.pug
+++ b/src/components/sections/about/about.pug
@@ -1,4 +1,4 @@
-section.about 
+section#about.about 
   .container 
     h2 #[span.yellow Компания] Auto Movers
     p Наша компания — это команда профессионалов
