--- a/src/components/sections/main/_main.scss
+++ b/src/components/sections/main/_main.scss
@@ -10,7 +10,7 @@
   //   max-height: 108rem;
   // }
 
-  &:after {
+  &::after {
     position: absolute;
     content: "";
     z-index: 110;
@@ -21,7 +21,7 @@
     width: 100%;
     height: 100%;
     background: rgba(#000, 0.5);
-    // pointer-events: none;
+
   }
 
   &__inner {
@@ -47,21 +47,21 @@
       padding-bottom: 0;
     }
     
-    h1 {
-      text-align: center;
-      margin-bottom: 2.2rem;
-      @include RobotoBold();
-      font-size: 3rem;
-      line-height: 130%;
-      color: var(--white_1);
+    // h1 {
+    //   text-align: center;
+    //   margin-bottom: 2.2rem;
+    //   @include RobotoBold();
+    //   font-size: 3rem;
+    //   line-height: 130%;
+    //   color: var(--white_1);
 
-      @media (min-width: 1440px) {
-        max-width: 90rem;
-        text-align: left;
-        margin-bottom: 4.4rem;
-        font-size: 6rem;
-      }
-    }
+    //   @media (min-width: 1440px) {
+    //     max-width: 90rem;
+    //     text-align: left;
+    //     margin-bottom: 4.4rem;
+    //     font-size: 6rem;
+    //   }
+    // }
 
     p {
       // max-width: 60rem;
