--- a/src/components/sections/reviews/reviews.pug
+++ b/src/components/sections/reviews/reviews.pug
@@ -1,4 +1,4 @@
-section.reviews 
+section#reviews.reviews 
   .container 
     h2 #[span.yellow Отзывы] о компании
     p Наша цель — исполнить вашу мечту
