--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -23,6 +23,14 @@ main {
   width: 100%;
 }
 
+main {
+  flex: 1 0 auto;
+}
+
+footer {
+  flex: 0 0 auto;
+}
+
 .wrapper {
   width: 100%;
   min-height: 100vh;
