--- a/src/scss/global/typography.scss
+++ b/src/scss/global/typography.scss
@@ -1,3 +1,23 @@
+h1 {
+  text-align: center;
+  margin-bottom: 2.2rem;
+  @include RobotoBold();
+  font-size: 2.4rem;
+  line-height: 130%;
+  color: var(--white_1);
+
+  @media (min-width: 1024px) {
+    font-size: 4.5rem;
+  }
+
+  @media (min-width: 1440px) {
+    max-width: 90rem;
+    text-align: left;
+    margin-bottom: 4.4rem;
+    font-size: 6rem;
+  }
+}
+
 h2 {
   @include RobotoBold();
   font-size: 3.5rem;
