added link to btn

--- a/src/components/sections/main/main.pug
+++ b/src/components/sections/main/main.pug
@@ -12,4 +12,4 @@ main.main
       li Поможем определиться с моделью
       li Проконсультируем по любым вопросам
       li Доставим автомобиль на заказ
-    button.btn.main__btn Перейти в каталог
+    a(href="#catalog").btn.main__btn Перейти в каталог
